# Mini-Minecraft

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  resources.qrc
resources/: static_resources.qrc
resources/icons/: app_icon_macos.icns  app_icon_windows.rc
resources/shaders/: block_face.glsl  geometry.frag.glsl  geometry.vert.glsl  lighting.frag.glsl  quad.vert.glsl  shadow_depth.frag.glsl  shadow_depth.vert.glsl  uniform_buffer_data.glsl  water_wave.glsl
shaders/: block_face.glsl  block_type.glsl  flat.frag.glsl  flat.vert.glsl  geometry.frag.glsl  geometry.vert.glsl  lambert.frag.glsl  lambert.vert.glsl  lighting.frag.glsl  post_processing.frag.glsl  post_processing.vert.glsl  quad.vert.glsl  shadow_depth.frag.glsl  shadow_depth.vert.glsl  shadow_map_blur.frag.glsl  water_wave.glsl
src/: aligned_box.cpp  aligned_box.h  aligned_box_3d.cpp  aligned_box_3d.h  array_texture_2d.cpp  array_texture_2d.h  block_face_generation_task.cpp  block_face_generation_task.h  block_type.cpp  block_type.h  camera.cpp  camera.h  camera_controls_window.cpp  camera_controls_window.h  constants.h  direction.h  entity.cpp  entity.h  framebuffer.cpp  framebuffer.h  geometry_framebuffer.cpp  geometry_framebuffer.h  gl_context.cpp  gl_context.h  gl_widget.cpp  gl_widget.h  instanced_renderer.h  int_pair_hash.cpp  int_pair_hash.h  ivec2_hash.h  main.cpp  main_window.cpp  main_window.h  movement_mode.h  opengl_context.cpp  opengl_context.h  opengl_object.h  opengl_widget.cpp  opengl_widget.h  player.cpp  (+38 more)
tools/: preprocess_shader.py
